--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -192,17 +192,17 @@
     "header": "Delegate",
     "selectDelegate": "Select delegate",
     "to": "To",
-    "addressPlaceholder": "Address or ENS name",
+    "addressPlaceholder": "Address or LNS name",
     "delegations": "Your delegation(s)",
     "allSpaces": "For all spaces",
     "delegated": "Delegated to you",
     "pendingTransaction": "no pending transaction | 1 pending transaction | {count} pending transactions",
     "topDelegates": "Top delegates",
     "noDelegatesFoundFor": "No delegates found for {0}",
-    "noValidEns": "Not a valid ENS address.",
+    "noValidEns": "Not a valid LNS address.",
     "noValidAddress": "Not a valid address",
     "delegateToSelf": "You cannot delegate to yourself",
-    "delegateToSelfAddress": "You cannot delegate to your own ENS address",
+    "delegateToSelfAddress": "You cannot delegate to your own LNS address",
     "noValidSpaceId": "Not a valid space ID",
     "noDelegationsAndDelegates": "Can't find your delegations and delegates? Make sure you are connected to the correct network.",
     "delegateNotSupported": "Delegation is currently not supported for {network}."
@@ -241,9 +241,9 @@
   },
   "settings": {
     "header": "Settings",
-    "setEnsTextRecord": "Set ENS text record",
+    "setEnsTextRecord": "Set LNS text record",
     "editController": "Edit controller",
-    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an ENS text record pointing to that file.",
+    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an LNS text record pointing to that file.",
     "profile": "Profile",
     "avatar": "Avatar",
     "name": "Name",
@@ -272,7 +272,7 @@
     "editValidation": "Edit validation",
     "selectValidation": "Select validation",
     "validationParameters": "Validation parameters",
-    "warningTextRecord": "You must set a text record on the ENS domain.",
+    "warningTextRecord": "You must set a text record on the LNS domain.",
     "votingDelay": "Voting delay",
     "votingPeriod": "Voting period",
     "voting": "Voting",
@@ -287,26 +287,26 @@
   },
   "setup": {
     "example": "e.g. yam.eth",
-    "chooseExistingEns": "Choose one of your existing ENS domains to create a space with:",
-    "useSingleExistingEns": "Use your existing ENS domain:",
+    "chooseExistingEns": "Choose one of your existing LNS domains to create a space with:",
+    "useSingleExistingEns": "Use your existing LNS domain:",
     "orReigsterNewEns": "Or register a new domain:",
-    "toCreateASpace": "To create a space, you first need an ENS domain. Enter one below and follow the ENS registration instructions.",
+    "toCreateASpace": "To create a space, you first need an LNS domain. Enter one below and follow the LNS registration instructions.",
     "createASpace": "Create a space",
     "registerEnsButton": "Register",
     "supportedEnsTLDs": "Supported domain endings",
     "helpDocsAndDiscordLinks": "Not sure how to create a space? Learn more in the <a target='_blank' href='https://docs.snapshot.org/spaces/create'> documentation </a> or join Snapshot <a target='_blank' href='https://discord.gg/snapshot'>Discord</a>.",
-    "setSpaceController": "Set space controller address on ENS",
-    "editSpaceController": "Edit controller on ENS",
+    "setSpaceController": "Set space controller address on LNS",
+    "editSpaceController": "Edit controller on LNS",
     "setController": "Set controller",
-    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your ENS domain.",
+    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your LNS domain.",
     "confirmToSetAddress": "Are you sure you want to set {address} as the controller of the space?",
     "controllerHasAuthority": "The controller has full authority over the space settings",
     "controller": "Controller",
-    "selectEnsForSpace": "Choose ENS address",
+    "selectEnsForSpace": "Choose LNS address",
     "spaceOwnerAddressPlaceHolder": "e.g. 0xF78108c9BBaF466dd96BE41be728Fe3220b37119",
     "controllerAddress": "Controller address",
     "updateController": "Update controller",
-    "seeOnEns": "See on ENS",
+    "seeOnEns": "See on LNS",
     "goToSettings": "Go to settings",
     "setSpaceProfile": "Customize your space",
     "waitForTransaction": "The transaction need to confirm before you can create your space. {txUrl}",
@@ -322,7 +322,7 @@
     "delegationRemoved": "Delegation removed",
     "proposalCreated": "Proposal created",
     "voteSuccessful": "Your vote is in!",
-    "ensSet": "ENS text record was successfully set",
+    "ensSet": "LNS text record was successfully set",
     "transactionSent": "Transaction sent"
   },
   "explore": {
@@ -495,7 +495,7 @@
   },
   "unsupportedNetwork": {
     "unsupportedNetwork": "Unsupported network",
-    "ensOnlyMainnet": "Snapshot only supports ENS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
+    "ensOnlyMainnet": "Snapshot only supports LNS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
     "switchNetworkToMainnet": "To continue, you need to change the network in your wallet to Ethereum Mainnet.",
     "switchToMainnet": "Switch to Mainnet"
   }
