--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -181,17 +181,17 @@
     "header": "Déléguer",
     "selectDelegate": "Sélectionner une délégation",
     "to": "Vers",
-    "addressPlaceholder": "Adresse ou ENS",
+    "addressPlaceholder": "Adresse ou LNS",
     "delegations": "Vos délégation(s)",
     "allSpaces": "Pour tous les espaces",
     "delegated": "Vous délègue",
     "pendingTransaction": "aucune transaction en attente | 1 transaction en attente | {count} transactions en attente",
     "topDelegates": "Meilleurs délégués",
     "noDelegatesFoundFor": "No delegates found for {0}",
-    "noValidEns": "Not a valid ENS address.",
+    "noValidEns": "Not a valid LNS address.",
     "noValidAddress": "Not a valid address",
     "delegateToSelf": "You cannot delegate to yourself",
-    "delegateToSelfAddress": "You cannot delegate to your own ENS address",
+    "delegateToSelfAddress": "You cannot delegate to your own LNS address",
     "noValidSpaceId": "Not a valid space ID",
     "noDelegationsAndDelegates": "Can't find your delegations and delegates? Make sure you are connected to the correct network.",
     "delegateNotSupported": "Delegation is currently not supported for {network}."
@@ -221,9 +221,9 @@
   },
   "settings": {
     "header": "Réglages",
-    "setEnsTextRecord": "Set ENS text record",
+    "setEnsTextRecord": "Set LNS text record",
     "editController": "Edit controller",
-    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an ENS text record pointing to that file.",
+    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an LNS text record pointing to that file.",
     "profile": "Profil",
     "avatar": "Avatar",
     "name": "Nom",
@@ -252,7 +252,7 @@
     "editValidation": "Modifier la validation",
     "selectValidation": "Sélectionner la validation",
     "validationParameters": "Paramètres de validation",
-    "warningTextRecord": "Vous devez définir un enregistrement TXT sur le domaine ENS.",
+    "warningTextRecord": "Vous devez définir un enregistrement TXT sur le domaine LNS.",
     "votingDelay": "Délai avant vote",
     "votingPeriod": "Période de vote",
     "voting": "Vote",
@@ -264,28 +264,28 @@
   },
   "setup": {
     "example": "ex : yam.eth",
-    "chooseExistingEns": "Choose one of your existing ENS domains to create a space with:",
-    "useSingleExistingEns": "Use your existing ENS domain:",
+    "chooseExistingEns": "Choose one of your existing LNS domains to create a space with:",
+    "useSingleExistingEns": "Use your existing LNS domain:",
     "orReigsterNewEns": "Or register a new domain:",
-    "toCreateASpace": "To create a space, you first need an ENS domain. Enter one below and follow the ENS registration instructions.",
+    "toCreateASpace": "To create a space, you first need an LNS domain. Enter one below and follow the LNS registration instructions.",
     "createASpace": "Créer un espace",
     "registerEnsButton": "Register",
     "supportedEnsTLDs": "Supported domain endings",
     "helpDocsAndDiscordLinks": "Not sure how to create a space? Learn more in the <a target='_blank' href='https://docs.snapshot.org/spaces/create'> documentation </a> or join Snapshot <a target='_blank' href='https://discord.gg/snapshot'>Discord</a>.",
-    "setSpaceController": "Set space controller address on ENS",
-    "editSpaceController": "Edit controller on ENS",
+    "setSpaceController": "Set space controller address on LNS",
+    "editSpaceController": "Edit controller on LNS",
     "setController": "Set controller",
-    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your ENS domain.",
+    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your LNS domain.",
     "confirmToSetAddress": "Are you sure you want to set {address} as the controller of the space?",
     "controllerHasAuthority": "The controller has full authority over the space settings",
     "controller": "Controller",
-    "selectEnsForSpace": "Choose ENS address",
+    "selectEnsForSpace": "Choose LNS address",
     "textRecordExists": "Currently the space controller is {address}. You can update the space controller by using the form below.",
     "spaceOwnerAddressPlaceHolder": "e.g. 0xF78108c9BBaF466dd96BE41be728Fe3220b37119",
     "controllerAddress": "Controller address",
     "updateController": "Update controller",
     "connectWithEnsController": "To modify the space controller you need to connect with the wallet that owns {ens}",
-    "seeOnEns": "See on ENS",
+    "seeOnEns": "See on LNS",
     "goToSettings": "Go to settings"
   },
   "notify": {
@@ -298,7 +298,7 @@
     "delegationRemoved": "Délégation retirée",
     "proposalCreated": "Proposition créée",
     "voteSuccessful": "Votre vote est enregistré !",
-    "ensSet": "ENS text record was successfully set"
+    "ensSet": "LNS text record was successfully set"
   },
   "explore": {
     "createStrategy": "Créer une stratégie",
@@ -469,7 +469,7 @@
   },
   "unsupportedNetwork": {
     "unsupportedNetwork": "Unsupported network",
-    "ensOnlyMainnet": "Snapshot only supports ENS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
+    "ensOnlyMainnet": "Snapshot only supports LNS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
     "switchNetworkToMainnet": "To continue, you need to change the network in your wallet to Ethereum Mainnet.",
     "switchToMainnet": "Switch to Mainnet"
   }
