--- a/src/locales/ko-KR.json
+++ b/src/locales/ko-KR.json
@@ -181,17 +181,17 @@
     "header": "대리자",
     "selectDelegate": "대리인 선택",
     "to": "누구에게",
-    "addressPlaceholder": "주소 또는 ENS 이름",
+    "addressPlaceholder": "주소 또는 LNS 이름",
     "delegations": "당신의 대리인",
     "allSpaces": "모든 공간",
     "delegated": "당신에게 위임됨",
     "pendingTransaction": "보류 중인 트랜잭션 없음 | 1 보류 중인 트랜잭션 | {count} 보류 중인 트랜잭션",
     "topDelegates": "상위 대리자",
     "noDelegatesFoundFor": "{0} 에 대한 대리자를 찾을 수 없습니다.",
-    "noValidEns": "올바른 ENS 주소 아님",
+    "noValidEns": "올바른 LNS 주소 아님",
     "noValidAddress": "올바르지 않은 주소",
     "delegateToSelf": "자기 자신에게는 위임할 수 없음",
-    "delegateToSelfAddress": "자기 자신의 ENS 주소로는 위임할 수 없슴",
+    "delegateToSelfAddress": "자기 자신의 LNS 주소로는 위임할 수 없슴",
     "noValidSpaceId": "올바르지 않은 공간 ID",
     "noDelegationsAndDelegates": "대리자를 찾을 수 없습니까? 올바른 네트워크에 연결되어 있는지 확인하십시오.",
     "delegateNotSupported": "위임은 현재 {network} 에서 지원되지 않습니다."
@@ -221,9 +221,9 @@
   },
   "settings": {
     "header": "설정",
-    "setEnsTextRecord": "ENS 텍스트 레코드 설정",
+    "setEnsTextRecord": "LNS 텍스트 레코드 설정",
     "editController": "관리자 설정",
-    "needToSetEnsText": "공간 설정은 IPFS의 파일에 저장됩니다. 편집하기 전에 해당 파일을 가리키는 ENS 텍스트 레코드를 설정해야 합니다.",
+    "needToSetEnsText": "공간 설정은 IPFS의 파일에 저장됩니다. 편집하기 전에 해당 파일을 가리키는 LNS 텍스트 레코드를 설정해야 합니다.",
     "profile": "프로필",
     "avatar": "아바타",
     "name": "이름",
@@ -252,7 +252,7 @@
     "editValidation": "유효성 검사 편집",
     "selectValidation": "유효성 검사 선택",
     "validationParameters": "검증 매개변수",
-    "warningTextRecord": "ENS 도메인에 텍스트 레코드를 설정해야 합니다.",
+    "warningTextRecord": "LNS 도메인에 텍스트 레코드를 설정해야 합니다.",
     "votingDelay": "투표 지연",
     "votingPeriod": "투표 기간",
     "voting": "투표",
@@ -264,28 +264,28 @@
   },
   "setup": {
     "example": "예시 yam.eth",
-    "chooseExistingEns": "공간을 만드는데 사용할 ENS 도메인 선택:",
-    "useSingleExistingEns": "당신의 ENS 도메인을 사용하세요:",
+    "chooseExistingEns": "공간을 만드는데 사용할 LNS 도메인 선택:",
+    "useSingleExistingEns": "당신의 LNS 도메인을 사용하세요:",
     "orReigsterNewEns": "또는 새로운 도메인을 등록하세요:",
-    "toCreateASpace": "공간을 만들려면, 먼저 ENS 도메인이 필요합니다. 아래에 하나를 작성하고 ENS 등록 지침을 따라주세요.",
+    "toCreateASpace": "공간을 만들려면, 먼저 LNS 도메인이 필요합니다. 아래에 하나를 작성하고 LNS 등록 지침을 따라주세요.",
     "createASpace": "공간 만들기",
     "registerEnsButton": "등록",
     "supportedEnsTLDs": "지원되는 도메인 끝자리",
     "helpDocsAndDiscordLinks": "공간을 만드는 방법을 잘 모르신다면, 다음 <a target='_blank' href='https://docs.snapshot.org/spaces/create'>문서</a>를 참조하거나 스냅샷 <a target='_blank' href='https://discord.gg/snapshot'>디스코드</a>에 조인하세요.",
-    "setSpaceController": "ENS에서 공간 컨트롤러를 설정",
-    "editSpaceController": "ENS 관리자 수정",
+    "setSpaceController": "LNS에서 공간 컨트롤러를 설정",
+    "editSpaceController": "LNS 관리자 수정",
     "setController": "관리자 설정",
-    "explainControllerAndEns": "이 액션은 ENS 도메인을 스냅샷 TEXT 레코드에 추가할 이더리움 메인넷 상의 트랜잭션을 요구한다.",
+    "explainControllerAndEns": "이 액션은 LNS 도메인을 스냅샷 TEXT 레코드에 추가할 이더리움 메인넷 상의 트랜잭션을 요구한다.",
     "confirmToSetAddress": "{address} 를 공간 관리자로 설정하겠습니까?",
     "controllerHasAuthority": "관리자는 공간 설정에 대한 전체 권한을 갖습니다.",
     "controller": "관리자",
-    "selectEnsForSpace": "ENS 주소 선택",
+    "selectEnsForSpace": "LNS 주소 선택",
     "textRecordExists": "현재 공간 관리자는 {address} 입니다. 아래 폼을 사용해서 공간 관리자를 업데이트 할 수 있습니다.",
     "spaceOwnerAddressPlaceHolder": "예시 0xF78108c9BBaF466dd96BE41be728Fe3220b37119",
     "controllerAddress": "관리자 주소",
     "updateController": "관리자 업데이트",
     "connectWithEnsController": "공간 관리자를 수정하기 위해서는 {ens} 를 소유한 지갑을 연결해야 합니다.",
-    "seeOnEns": "ENS 보기",
+    "seeOnEns": "LNS 보기",
     "goToSettings": "설정으로 이동"
   },
   "notify": {
@@ -298,7 +298,7 @@
     "delegationRemoved": "위임 제거됨",
     "proposalCreated": "제안 생성됨",
     "voteSuccessful": "투표가 완료되었습니다!",
-    "ensSet": "ENS 텍스트 레코드가 성공적으로 설정되었습니다."
+    "ensSet": "LNS 텍스트 레코드가 성공적으로 설정되었습니다."
   },
   "explore": {
     "createStrategy": "전략 만들기",
@@ -469,7 +469,7 @@
   },
   "unsupportedNetwork": {
     "unsupportedNetwork": "지원되지 않는 네트워크",
-    "ensOnlyMainnet": "Snapshot은 이더리움 메인넷 상에서만 ENS를 지원합니다. 일단 공간이 생성되면 여러 체인에서 사용할 수 있습니다.",
+    "ensOnlyMainnet": "Snapshot은 이더리움 메인넷 상에서만 LNS를 지원합니다. 일단 공간이 생성되면 여러 체인에서 사용할 수 있습니다.",
     "switchNetworkToMainnet": "계속하려면 지갑의 네트워크를 이더리움 메인넷으로 변경해야 합니다.",
     "switchToMainnet": "메인넷으로 바꾸기"
   }
