--- a/src/locales/ro-RO.json
+++ b/src/locales/ro-RO.json
@@ -181,17 +181,17 @@
     "header": "Deleghează",
     "selectDelegate": "Selectează delegat",
     "to": "Către",
-    "addressPlaceholder": "Adresă sau nume ENS",
+    "addressPlaceholder": "Adresă sau nume LNS",
     "delegations": "Delegațiile tale",
     "allSpaces": "Pentru toate spațiile",
     "delegated": "Delegat ție",
     "pendingTransaction": "nicio tranzacție în așteptare | 1 tranzacție în așteptare | {count} tranzacții în așteptare",
     "topDelegates": "Cei mai buni delegați",
     "noDelegatesFoundFor": "Nici un delegat găsit pentru {0}",
-    "noValidEns": "Nu este o adresă ENS validă.",
+    "noValidEns": "Nu este o adresă LNS validă.",
     "noValidAddress": "Nu este o adresă validă",
     "delegateToSelf": "Nu poți delega către tine însuți",
-    "delegateToSelfAddress": "Nu poți delega la propria adresă ENS",
+    "delegateToSelfAddress": "Nu poți delega la propria adresă LNS",
     "noValidSpaceId": "Nu este un ID de spațiu valid",
     "noDelegationsAndDelegates": "Nu iți găsești delegațiile și delegații? Asigură-te că ești conectat la rețeaua corectă.",
     "delegateNotSupported": "Delegația nu este acceptată în prezent pentru {network}."
@@ -221,9 +221,9 @@
   },
   "settings": {
     "header": "Setări",
-    "setEnsTextRecord": "Set ENS text record",
+    "setEnsTextRecord": "Set LNS text record",
     "editController": "Edit controller",
-    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an ENS text record pointing to that file.",
+    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an LNS text record pointing to that file.",
     "profile": "Profil",
     "avatar": "Avatar",
     "name": "Nume",
@@ -252,7 +252,7 @@
     "editValidation": "Modifică validarea",
     "selectValidation": "Selectează validarea",
     "validationParameters": "Parametrii de validare",
-    "warningTextRecord": "Trebuie sa setezi o inrînregistrare de text pe domeniul ENS.",
+    "warningTextRecord": "Trebuie sa setezi o inrînregistrare de text pe domeniul LNS.",
     "votingDelay": "Intârziere vot",
     "votingPeriod": "Perioada de vot",
     "voting": "Votare",
@@ -264,28 +264,28 @@
   },
   "setup": {
     "example": "e.g. yam.eth",
-    "chooseExistingEns": "Alege unul dintre domeniile tale ENS existente pentru a crea un spațiu:",
-    "useSingleExistingEns": "Utilizează domeniul tău ENS existent:",
+    "chooseExistingEns": "Alege unul dintre domeniile tale LNS existente pentru a crea un spațiu:",
+    "useSingleExistingEns": "Utilizează domeniul tău LNS existent:",
     "orReigsterNewEns": "Sau înregistrează un nou domeniu:",
-    "toCreateASpace": "Pentru a crea un spațiu, ai nevoie mai întâi de un domeniu ENS. Introdu unul mai jos și urmează instrucțiunile de înregistrare ENS.",
+    "toCreateASpace": "Pentru a crea un spațiu, ai nevoie mai întâi de un domeniu LNS. Introdu unul mai jos și urmează instrucțiunile de înregistrare LNS.",
     "createASpace": "Crează un spațiu",
     "registerEnsButton": "Înregistrează-te",
     "supportedEnsTLDs": "Sufix domenii suportate",
     "helpDocsAndDiscordLinks": "Nu ești sigur cum să creezi un spațiu? Află mai multe în documentația <a target='_blank' href='https://docs.snapshot.org/spaces/create'> </a> sau alătură-te la Snapshot <a target='_blank' href='https://discord.gg/snapshot'>Discord</a>.",
-    "setSpaceController": "Set space controller address on ENS",
-    "editSpaceController": "Edit controller on ENS",
+    "setSpaceController": "Set space controller address on LNS",
+    "editSpaceController": "Edit controller on LNS",
     "setController": "Set controller",
-    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your ENS domain.",
+    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your LNS domain.",
     "confirmToSetAddress": "Are you sure you want to set {address} as the controller of the space?",
     "controllerHasAuthority": "The controller has full authority over the space settings",
     "controller": "Controller",
-    "selectEnsForSpace": "Choose ENS address",
+    "selectEnsForSpace": "Choose LNS address",
     "textRecordExists": "Currently the space controller is {address}. You can update the space controller by using the form below.",
     "spaceOwnerAddressPlaceHolder": "e.g. 0xF78108c9BBaF466dd96BE41be728Fe3220b37119",
     "controllerAddress": "Controller address",
     "updateController": "Update controller",
     "connectWithEnsController": "To modify the space controller you need to connect with the wallet that owns {ens}",
-    "seeOnEns": "See on ENS",
+    "seeOnEns": "See on LNS",
     "goToSettings": "Go to settings"
   },
   "notify": {
@@ -298,7 +298,7 @@
     "delegationRemoved": "Delegare eliminată",
     "proposalCreated": "Propunere creată",
     "voteSuccessful": "Ai votat cu succes!",
-    "ensSet": "ENS text record was successfully set"
+    "ensSet": "LNS text record was successfully set"
   },
   "explore": {
     "createStrategy": "Crează strategie",
@@ -469,7 +469,7 @@
   },
   "unsupportedNetwork": {
     "unsupportedNetwork": "Unsupported network",
-    "ensOnlyMainnet": "Snapshot only supports ENS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
+    "ensOnlyMainnet": "Snapshot only supports LNS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
     "switchNetworkToMainnet": "To continue, you need to change the network in your wallet to Ethereum Mainnet.",
     "switchToMainnet": "Switch to Mainnet"
   }
