--- a/src/locales/tr-TR.json
+++ b/src/locales/tr-TR.json
@@ -181,17 +181,17 @@
     "header": "Temsilci",
     "selectDelegate": "Temsilci seç",
     "to": "Alıcı",
-    "addressPlaceholder": "Adres veya ENS adı",
+    "addressPlaceholder": "Adres veya LNS adı",
     "delegations": "Temsilcilik(ler)iniz",
     "allSpaces": "Tüm alanlar için",
     "delegated": "Görevlendir",
     "pendingTransaction": "bekleyen işlem yok | 1 bekleyen işlem | {count} bekleyen işlem",
     "topDelegates": "Top delegates",
     "noDelegatesFoundFor": "No delegates found for {0}",
-    "noValidEns": "Not a valid ENS address.",
+    "noValidEns": "Not a valid LNS address.",
     "noValidAddress": "Not a valid address",
     "delegateToSelf": "You cannot delegate to yourself",
-    "delegateToSelfAddress": "You cannot delegate to your own ENS address",
+    "delegateToSelfAddress": "You cannot delegate to your own LNS address",
     "noValidSpaceId": "Not a valid space ID",
     "noDelegationsAndDelegates": "Can't find your delegations and delegates? Make sure you are connected to the correct network.",
     "delegateNotSupported": "Delegation is currently not supported for {network}."
@@ -221,9 +221,9 @@
   },
   "settings": {
     "header": "Ayarlar",
-    "setEnsTextRecord": "Set ENS text record",
+    "setEnsTextRecord": "Set LNS text record",
     "editController": "Edit controller",
-    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an ENS text record pointing to that file.",
+    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an LNS text record pointing to that file.",
     "profile": "Profil",
     "avatar": "Profil Resmi",
     "name": "İsim",
@@ -252,7 +252,7 @@
     "editValidation": "Doğrulamaları düzenle",
     "selectValidation": "Doğrulamayı seçin",
     "validationParameters": "Doğrulama parametreleri",
-    "warningTextRecord": "ENS alanında bir metin kaydı ayarlamalısınız.",
+    "warningTextRecord": "LNS alanında bir metin kaydı ayarlamalısınız.",
     "votingDelay": "Oylama gecikmesi",
     "votingPeriod": "Oylama periyodu",
     "voting": "Oylama",
@@ -264,28 +264,28 @@
   },
   "setup": {
     "example": "örneğin. yam.eth",
-    "chooseExistingEns": "Choose one of your existing ENS domains to create a space with:",
-    "useSingleExistingEns": "Use your existing ENS domain:",
+    "chooseExistingEns": "Choose one of your existing LNS domains to create a space with:",
+    "useSingleExistingEns": "Use your existing LNS domain:",
     "orReigsterNewEns": "Or register a new domain:",
-    "toCreateASpace": "To create a space, you first need an ENS domain. Enter one below and follow the ENS registration instructions.",
+    "toCreateASpace": "To create a space, you first need an LNS domain. Enter one below and follow the LNS registration instructions.",
     "createASpace": "Oluştur",
     "registerEnsButton": "Kaydol",
     "supportedEnsTLDs": "Supported domain endings",
     "helpDocsAndDiscordLinks": "Not sure how to create a space? Learn more in the <a target='_blank' href='https://docs.snapshot.org/spaces/create'> documentation </a> or join Snapshot <a target='_blank' href='https://discord.gg/snapshot'>Discord</a>.",
-    "setSpaceController": "Set space controller address on ENS",
-    "editSpaceController": "Edit controller on ENS",
+    "setSpaceController": "Set space controller address on LNS",
+    "editSpaceController": "Edit controller on LNS",
     "setController": "Set controller",
-    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your ENS domain.",
+    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your LNS domain.",
     "confirmToSetAddress": "Are you sure you want to set {address} as the controller of the space?",
     "controllerHasAuthority": "The controller has full authority over the space settings",
     "controller": "Controller",
-    "selectEnsForSpace": "Choose ENS address",
+    "selectEnsForSpace": "Choose LNS address",
     "textRecordExists": "Currently the space controller is {address}. You can update the space controller by using the form below.",
     "spaceOwnerAddressPlaceHolder": "e.g. 0xF78108c9BBaF466dd96BE41be728Fe3220b37119",
     "controllerAddress": "Controller address",
     "updateController": "Update controller",
     "connectWithEnsController": "To modify the space controller you need to connect with the wallet that owns {ens}",
-    "seeOnEns": "See on ENS",
+    "seeOnEns": "See on LNS",
     "goToSettings": "Go to settings"
   },
   "notify": {
@@ -298,7 +298,7 @@
     "delegationRemoved": "Delegation removed",
     "proposalCreated": "Proposal created",
     "voteSuccessful": "Your vote is in!",
-    "ensSet": "ENS text record was successfully set"
+    "ensSet": "LNS text record was successfully set"
   },
   "explore": {
     "createStrategy": "Strateji oluştur",
@@ -469,7 +469,7 @@
   },
   "unsupportedNetwork": {
     "unsupportedNetwork": "Unsupported network",
-    "ensOnlyMainnet": "Snapshot only supports ENS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
+    "ensOnlyMainnet": "Snapshot only supports LNS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
     "switchNetworkToMainnet": "To continue, you need to change the network in your wallet to Ethereum Mainnet.",
     "switchToMainnet": "Switch to Mainnet"
   }
