--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -181,17 +181,17 @@
     "header": "委托",
     "selectDelegate": "选择委托",
     "to": "给",
-    "addressPlaceholder": "地址或ENS域名",
+    "addressPlaceholder": "地址或LNS域名",
     "delegations": "您的授权",
     "allSpaces": "用于所有空间",
     "delegated": "已委托给您",
     "pendingTransaction": "没有待处理交易 | 1 个待处理交易 | {count} 个待处理交易",
     "topDelegates": "顶级委托",
     "noDelegatesFoundFor": "没有找到 {0} 的委托",
-    "noValidEns": "此ENS地址无效",
+    "noValidEns": "此LNS地址无效",
     "noValidAddress": "此地址无效",
     "delegateToSelf": "不能将自己选为委托人",
-    "delegateToSelfAddress": "您不能委托给您自己的ENS地址",
+    "delegateToSelfAddress": "您不能委托给您自己的LNS地址",
     "noValidSpaceId": "此空间ID无效",
     "noDelegationsAndDelegates": "找不到您的委托人和代委托？请确保您已经连接到正确的网络。",
     "delegateNotSupported": "目前 {network} 不支持委托。"
@@ -221,9 +221,9 @@
   },
   "settings": {
     "header": "设置",
-    "setEnsTextRecord": "设置 ENS 文本记录",
+    "setEnsTextRecord": "设置 LNS 文本记录",
     "editController": "编辑控制人",
-    "needToSetEnsText": "您的空间设置将保存在IPFS文件中。 在您可以编辑他们之前，您需要设置一个 ENS 文本记录指向该文件。",
+    "needToSetEnsText": "您的空间设置将保存在IPFS文件中。 在您可以编辑他们之前，您需要设置一个 LNS 文本记录指向该文件。",
     "profile": "用户信息",
     "avatar": "头像",
     "name": "名称",
@@ -252,7 +252,7 @@
     "editValidation": "编辑验证",
     "selectValidation": "选择验证",
     "validationParameters": "验证参数",
-    "warningTextRecord": "您必须给ENS域名设置TXT记录。",
+    "warningTextRecord": "您必须给LNS域名设置TXT记录。",
     "votingDelay": "投票延迟开始",
     "votingPeriod": "投票时长",
     "voting": "投票",
@@ -264,28 +264,28 @@
   },
   "setup": {
     "example": "例如 yam.eth",
-    "chooseExistingEns": "选择您现有的一个ENS域名来创建空间：",
-    "useSingleExistingEns": "使用您现有的ENS域名：",
+    "chooseExistingEns": "选择您现有的一个LNS域名来创建空间：",
+    "useSingleExistingEns": "使用您现有的LNS域名：",
     "orReigsterNewEns": "或者注册一个新的域名：",
-    "toCreateASpace": "要创建空间，您首先需要一个ENS域名。在下面输入一个，并按照ENS的注册说明进行操作。",
+    "toCreateASpace": "要创建空间，您首先需要一个LNS域名。在下面输入一个，并按照LNS的注册说明进行操作。",
     "createASpace": "创建空间",
     "registerEnsButton": "注册",
     "supportedEnsTLDs": "支持的域名结尾",
     "helpDocsAndDiscordLinks": "不知道如何创建空间？ 在 <a target='_blank' href='https://docs.snapshot.org/spaces/create'> 文档中了解更多信息</a> 或加入 Snapshot <a target='_blank' href='https:// /discord.gg/snapshot'>Discord</a>。",
-    "setSpaceController": "在 ENS 上设置空间控制人地址",
-    "editSpaceController": "在 ENS 上编辑控制人",
+    "setSpaceController": "在 LNS 上设置空间控制人地址",
+    "editSpaceController": "在 LNS 上编辑控制人",
     "setController": "设置控制人",
-    "explainControllerAndEns": "此操作需要在Ethereum Mainnet上进行交易，该交易会将“snapshot”文本记录添加到您的 ENS 域。",
+    "explainControllerAndEns": "此操作需要在Ethereum Mainnet上进行交易，该交易会将“snapshot”文本记录添加到您的 LNS 域。",
     "confirmToSetAddress": "您确定要设置 {address} 作为空间的控制人吗？",
     "controllerHasAuthority": "管理员对空间设置拥有所有权限",
     "controller": "控制人",
-    "selectEnsForSpace": "选择ENS地址",
+    "selectEnsForSpace": "选择LNS地址",
     "textRecordExists": "当前空间控制人是 {address}。您可以使用下面的表单更新空间控制人。",
     "spaceOwnerAddressPlaceHolder": "例如：0xF78108c9BAF466dd96BE41be728Fe3220b37119",
     "controllerAddress": "控制人地址",
     "updateController": "更新控制人",
     "connectWithEnsController": "要修改空间控制人，您需要连接拥有 {ens} 的钱包",
-    "seeOnEns": "在 ENS 上查看",
+    "seeOnEns": "在 LNS 上查看",
     "goToSettings": "前往设置"
   },
   "notify": {
@@ -298,7 +298,7 @@
     "delegationRemoved": "委托已移除",
     "proposalCreated": "提案已创建",
     "voteSuccessful": "投票成功！",
-    "ensSet": "ENS 文本记录已成功设置"
+    "ensSet": "LNS 文本记录已成功设置"
   },
   "explore": {
     "createStrategy": "创建策略",
@@ -469,7 +469,7 @@
   },
   "unsupportedNetwork": {
     "unsupportedNetwork": "不支持的网络",
-    "ensOnlyMainnet": "Snapshot仅支持以太坊主网上的 ENS。 创建空间后，您可以跨链使用它。",
+    "ensOnlyMainnet": "Snapshot仅支持以太坊主网上的 LNS。 创建空间后，您可以跨链使用它。",
     "switchNetworkToMainnet": "若要继续，您需要将你钱包中的网络更改为Ethereum Mainnet。",
     "switchToMainnet": "切换到Mainnet"
   }
