--- a/src/locales/de-DE.json
+++ b/src/locales/de-DE.json
@@ -181,17 +181,17 @@
     "header": "Delegieren",
     "selectDelegate": "Wählen Sie eine Delegation",
     "to": "An",
-    "addressPlaceholder": "Adresse oder ENS Name",
+    "addressPlaceholder": "Adresse oder LNS Name",
     "delegations": "Ihre Delegation(en)",
     "allSpaces": "Für alle Bereiche",
     "delegated": "An dich delegiert",
     "pendingTransaction": "keine ausstehende Transaktion | 1 ausstehende Transaktion | {count} ausstehende Transaktionen",
     "topDelegates": "Top delegates",
     "noDelegatesFoundFor": "Keine Delegierten für {0} gefunden",
-    "noValidEns": "Keine gültige ENS Adresse.",
+    "noValidEns": "Keine gültige LNS Adresse.",
     "noValidAddress": "Keine gültige Adresse",
     "delegateToSelf": "Du kannst nicht an dich selbst delegieren",
-    "delegateToSelfAddress": "Du kannst nicht an deine eigene ENS Adresse delegieren",
+    "delegateToSelfAddress": "Du kannst nicht an deine eigene LNS Adresse delegieren",
     "noValidSpaceId": "Keine gültige Space ID",
     "noDelegationsAndDelegates": "Du kannst keine Delegationen und Delegierten finden? Stelle sicher, dass du mit dem richtigen Netzwerk verbunden bist.",
     "delegateNotSupported": "Auf {network} wird Delegation derzeit nicht unterstützt."
@@ -221,9 +221,9 @@
   },
   "settings": {
     "header": "Einstellungen",
-    "setEnsTextRecord": "ENS Text-Eintrag setzen",
+    "setEnsTextRecord": "LNS Text-Eintrag setzen",
     "editController": "Edit controller",
-    "needToSetEnsText": "Ihre Space-Einstellungen werden in einer Datei auf IPFS gespeichert. Bevor Sie diese bearbeiten können, müssen Sie einen ENS-Text-Eintrag setzen, der auf diese Datei zeigt.",
+    "needToSetEnsText": "Ihre Space-Einstellungen werden in einer Datei auf IPFS gespeichert. Bevor Sie diese bearbeiten können, müssen Sie einen LNS-Text-Eintrag setzen, der auf diese Datei zeigt.",
     "profile": "Profil",
     "avatar": "Avatar",
     "name": "Name",
@@ -252,7 +252,7 @@
     "editValidation": "Validierung bearbeiten",
     "selectValidation": "Validierung auswählen",
     "validationParameters": "Validierungsparameter",
-    "warningTextRecord": "Sie müssen einen Text-Eintrag auf der ENS-Domain festlegen.",
+    "warningTextRecord": "Sie müssen einen Text-Eintrag auf der LNS-Domain festlegen.",
     "votingDelay": "Voting delay",
     "votingPeriod": "Voting period",
     "voting": "Voting",
@@ -264,18 +264,18 @@
   },
   "setup": {
     "example": "z.B. yam.eth",
-    "chooseExistingEns": "Choose one of your existing ENS domains to create a space with:",
-    "useSingleExistingEns": "Use your existing ENS domain:",
+    "chooseExistingEns": "Choose one of your existing LNS domains to create a space with:",
+    "useSingleExistingEns": "Use your existing LNS domain:",
     "orReigsterNewEns": "Or register a new domain:",
-    "toCreateASpace": "To create a space, you first need an ENS domain. Enter one below and follow the ENS registration instructions.",
+    "toCreateASpace": "To create a space, you first need an LNS domain. Enter one below and follow the LNS registration instructions.",
     "createASpace": "Bereich erstellen",
     "registerEnsButton": "Register",
     "supportedEnsTLDs": "Supported domain endings",
     "helpDocsAndDiscordLinks": "Nicht sicher, wie man einen Space erstellt? Erfahre mehr in der <a target='_blank' href='https://docs.snapshot.org/spaces/create'>Dokumentation</a> oder tritt dem Snapshot <a target='_blank' href='https://discord.gg/snapshot'>Discord</a> bei.",
-    "setSpaceController": "Set space controller address on ENS",
-    "editSpaceController": "Edit controller on ENS",
+    "setSpaceController": "Set space controller address on LNS",
+    "editSpaceController": "Edit controller on LNS",
     "setController": "Set controller",
-    "explainControllerAndEns": "Diese Aktion erfordert eine Transaktion im Ethereum Mainnet, die einen \"snapshot\" TEXT Eintrag zu Ihrer ENS Domain hinzufügt.",
+    "explainControllerAndEns": "Diese Aktion erfordert eine Transaktion im Ethereum Mainnet, die einen \"snapshot\" TEXT Eintrag zu Ihrer LNS Domain hinzufügt.",
     "confirmToSetAddress": "Are you sure you want to set {address} as the controller of the space?",
     "controllerHasAuthority": "The controller has full authority over the space settings",
     "controller": "Controller",
@@ -285,7 +285,7 @@
     "controllerAddress": "Controller-Adresse",
     "updateController": "Update controller",
     "connectWithEnsController": "Um den Space-Controller zu ändern, müssen Sie sich mit der Wallet verbinden, die {ens} besitzt",
-    "seeOnEns": "Auf ENS ansehen",
+    "seeOnEns": "Auf LNS ansehen",
     "goToSettings": "Go to settings"
   },
   "notify": {
@@ -298,7 +298,7 @@
     "delegationRemoved": "Delegation removed",
     "proposalCreated": "Proposal created",
     "voteSuccessful": "Your vote is in!",
-    "ensSet": "ENS Text Eintrag wurde erfolgreich gesetzt"
+    "ensSet": "LNS Text Eintrag wurde erfolgreich gesetzt"
   },
   "explore": {
     "createStrategy": "Strategie erstellen",
@@ -469,7 +469,7 @@
   },
   "unsupportedNetwork": {
     "unsupportedNetwork": "Nicht unterstütztes Netzwerk",
-    "ensOnlyMainnet": "Snapshot unterstützt nur ENS im Ethereum mainnet. Sobald der Space erstellt wurde, können Sie ihn über mehrere Chains hinweg nutzen.",
+    "ensOnlyMainnet": "Snapshot unterstützt nur LNS im Ethereum mainnet. Sobald der Space erstellt wurde, können Sie ihn über mehrere Chains hinweg nutzen.",
     "switchNetworkToMainnet": "Um fortzufahren, müssen Sie in Ihrem Wallet auf Ethereum Mainnet wechseln.",
     "switchToMainnet": "Zu Mainnet wechseln"
   }
