--- a/src/locales/id-ID.json
+++ b/src/locales/id-ID.json
@@ -181,17 +181,17 @@
     "header": "Perwakilan",
     "selectDelegate": "Pilih delegasi",
     "to": "Kepada",
-    "addressPlaceholder": "Alamat atau nama ENS",
+    "addressPlaceholder": "Alamat atau nama LNS",
     "delegations": "Perwakilan Anda(s)",
     "allSpaces": "Untuk semua ruang",
     "delegated": "Diwakilkan kepada Anda",
     "pendingTransaction": "tidak ada transaksi yang tertunda | 1 transaksi yang tertunda | {count} transaksi yang tertunda",
     "topDelegates": "Delegasi teratas",
     "noDelegatesFoundFor": "No delegates found for {0}",
-    "noValidEns": "Bukan alamat ENS yang valid.",
+    "noValidEns": "Bukan alamat LNS yang valid.",
     "noValidAddress": "Bukan alamat yang valid",
     "delegateToSelf": "Anda tidak bisa mendelegasikan diri sendiri",
-    "delegateToSelfAddress": "You cannot delegate to your own ENS address",
+    "delegateToSelfAddress": "You cannot delegate to your own LNS address",
     "noValidSpaceId": "Not a valid space ID",
     "noDelegationsAndDelegates": "Can't find your delegations and delegates? Make sure you are connected to the correct network.",
     "delegateNotSupported": "Delegation is currently not supported for {network}."
@@ -221,9 +221,9 @@
   },
   "settings": {
     "header": "Pengaturan",
-    "setEnsTextRecord": "Set ENS text record",
+    "setEnsTextRecord": "Set LNS text record",
     "editController": "Edit controller",
-    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an ENS text record pointing to that file.",
+    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an LNS text record pointing to that file.",
     "profile": "Profil",
     "avatar": "Avatar",
     "name": "Nama",
@@ -252,7 +252,7 @@
     "editValidation": "Sunting validitas",
     "selectValidation": "Pilih validitas",
     "validationParameters": "Parameter validitas",
-    "warningTextRecord": "Anda harus mengatur catatan teks pada domain ENS.",
+    "warningTextRecord": "Anda harus mengatur catatan teks pada domain LNS.",
     "votingDelay": "Penundaan pemungutan suara",
     "votingPeriod": "Periode pemungutan suara",
     "voting": "Pemungutan suara",
@@ -264,28 +264,28 @@
   },
   "setup": {
     "example": "misalnya yam.eth",
-    "chooseExistingEns": "Pilih satu domain ENS anda untuk membuat ruang:",
-    "useSingleExistingEns": "Pakai domain ENS anda:",
+    "chooseExistingEns": "Pilih satu domain LNS anda untuk membuat ruang:",
+    "useSingleExistingEns": "Pakai domain LNS anda:",
     "orReigsterNewEns": "Atau daftarkan domain yang baru:",
-    "toCreateASpace": "Untuk membuat ruang, anda harus punya ENS domain. Masukan satu dibawah dan ikuti instruksi pendaftaran ENS.",
+    "toCreateASpace": "Untuk membuat ruang, anda harus punya LNS domain. Masukan satu dibawah dan ikuti instruksi pendaftaran LNS.",
     "createASpace": "Buat sebuah ruang",
     "registerEnsButton": "Daftar",
     "supportedEnsTLDs": "Akhiran domain yang didukung",
     "helpDocsAndDiscordLinks": "Not sure how to create a space? Learn more in the <a target='_blank' href='https://docs.snapshot.org/spaces/create'> documentation </a> or join Snapshot <a target='_blank' href='https://discord.gg/snapshot'>Discord</a>.",
-    "setSpaceController": "Set space controller address on ENS",
-    "editSpaceController": "Edit controller on ENS",
+    "setSpaceController": "Set space controller address on LNS",
+    "editSpaceController": "Edit controller on LNS",
     "setController": "Set controller",
-    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your ENS domain.",
+    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your LNS domain.",
     "confirmToSetAddress": "Are you sure you want to set {address} as the controller of the space?",
     "controllerHasAuthority": "The controller has full authority over the space settings",
     "controller": "Controller",
-    "selectEnsForSpace": "Choose ENS address",
+    "selectEnsForSpace": "Choose LNS address",
     "textRecordExists": "Currently the space controller is {address}. You can update the space controller by using the form below.",
     "spaceOwnerAddressPlaceHolder": "e.g. 0xF78108c9BBaF466dd96BE41be728Fe3220b37119",
     "controllerAddress": "Controller address",
     "updateController": "Update controller",
     "connectWithEnsController": "To modify the space controller you need to connect with the wallet that owns {ens}",
-    "seeOnEns": "See on ENS",
+    "seeOnEns": "See on LNS",
     "goToSettings": "Go to settings"
   },
   "notify": {
@@ -298,7 +298,7 @@
     "delegationRemoved": "Delegasi dihapus",
     "proposalCreated": "Proposal dibuat",
     "voteSuccessful": "Suara Anda telah masuk!",
-    "ensSet": "ENS text record was successfully set"
+    "ensSet": "LNS text record was successfully set"
   },
   "explore": {
     "createStrategy": "Buat strategi",
@@ -469,7 +469,7 @@
   },
   "unsupportedNetwork": {
     "unsupportedNetwork": "Unsupported network",
-    "ensOnlyMainnet": "Snapshot only supports ENS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
+    "ensOnlyMainnet": "Snapshot only supports LNS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
     "switchNetworkToMainnet": "To continue, you need to change the network in your wallet to Ethereum Mainnet.",
     "switchToMainnet": "Switch to Mainnet"
   }
