--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -181,17 +181,17 @@
     "header": "Делегировать право голоса",
     "selectDelegate": "Выбрать делегата",
     "to": "В",
-    "addressPlaceholder": "Адрес или название ENS",
+    "addressPlaceholder": "Адрес или название LNS",
     "delegations": "Вы делегировали",
     "allSpaces": "Для всех разделов",
     "delegated": "Вам делегировали",
     "pendingTransaction": "нет ожидающих транзакций | 1 ожидающая транзакция | {count} ожидающих транзакций",
     "topDelegates": "Лучшие делегаты",
     "noDelegatesFoundFor": "No delegates found for {0}",
-    "noValidEns": "Not a valid ENS address.",
+    "noValidEns": "Not a valid LNS address.",
     "noValidAddress": "Not a valid address",
     "delegateToSelf": "You cannot delegate to yourself",
-    "delegateToSelfAddress": "You cannot delegate to your own ENS address",
+    "delegateToSelfAddress": "You cannot delegate to your own LNS address",
     "noValidSpaceId": "Not a valid space ID",
     "noDelegationsAndDelegates": "Can't find your delegations and delegates? Make sure you are connected to the correct network.",
     "delegateNotSupported": "Delegation is currently not supported for {network}."
@@ -221,9 +221,9 @@
   },
   "settings": {
     "header": "Настройки",
-    "setEnsTextRecord": "Set ENS text record",
+    "setEnsTextRecord": "Set LNS text record",
     "editController": "Edit controller",
-    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an ENS text record pointing to that file.",
+    "needToSetEnsText": "Your space settings will be stored in a file on IPFS. Before you can edit them, you need to set an LNS text record pointing to that file.",
     "profile": "Профиль",
     "avatar": "Изображение пользователя",
     "name": "Название",
@@ -252,7 +252,7 @@
     "editValidation": "Редактировать проверку",
     "selectValidation": "Выбрать проверку",
     "validationParameters": "Параметры проверки",
-    "warningTextRecord": "Вы должны задать текстовую запись в домене ENS.",
+    "warningTextRecord": "Вы должны задать текстовую запись в домене LNS.",
     "votingDelay": "Задержка голосования",
     "votingPeriod": "Период голосования",
     "voting": "Голосование",
@@ -264,28 +264,28 @@
   },
   "setup": {
     "example": "например, yam.eth",
-    "chooseExistingEns": "Choose one of your existing ENS domains to create a space with:",
-    "useSingleExistingEns": "Use your existing ENS domain:",
+    "chooseExistingEns": "Choose one of your existing LNS domains to create a space with:",
+    "useSingleExistingEns": "Use your existing LNS domain:",
     "orReigsterNewEns": "Or register a new domain:",
-    "toCreateASpace": "To create a space, you first need an ENS domain. Enter one below and follow the ENS registration instructions.",
+    "toCreateASpace": "To create a space, you first need an LNS domain. Enter one below and follow the LNS registration instructions.",
     "createASpace": "Создать раздел",
     "registerEnsButton": "Register",
     "supportedEnsTLDs": "Supported domain endings",
     "helpDocsAndDiscordLinks": "Not sure how to create a space? Learn more in the <a target='_blank' href='https://docs.snapshot.org/spaces/create'> documentation </a> or join Snapshot <a target='_blank' href='https://discord.gg/snapshot'>Discord</a>.",
-    "setSpaceController": "Set space controller address on ENS",
-    "editSpaceController": "Edit controller on ENS",
+    "setSpaceController": "Set space controller address on LNS",
+    "editSpaceController": "Edit controller on LNS",
     "setController": "Set controller",
-    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your ENS domain.",
+    "explainControllerAndEns": "This action requires a transaction on the Ethereum Mainnet which will add a \"snapshot\" TEXT record to your LNS domain.",
     "confirmToSetAddress": "Are you sure you want to set {address} as the controller of the space?",
     "controllerHasAuthority": "The controller has full authority over the space settings",
     "controller": "Controller",
-    "selectEnsForSpace": "Choose ENS address",
+    "selectEnsForSpace": "Choose LNS address",
     "textRecordExists": "Currently the space controller is {address}. You can update the space controller by using the form below.",
     "spaceOwnerAddressPlaceHolder": "e.g. 0xF78108c9BBaF466dd96BE41be728Fe3220b37119",
     "controllerAddress": "Controller address",
     "updateController": "Update controller",
     "connectWithEnsController": "To modify the space controller you need to connect with the wallet that owns {ens}",
-    "seeOnEns": "See on ENS",
+    "seeOnEns": "See on LNS",
     "goToSettings": "Go to settings"
   },
   "notify": {
@@ -298,7 +298,7 @@
     "delegationRemoved": "Удаление делегирования",
     "proposalCreated": "Предложение создано",
     "voteSuccessful": "Ваш голос засчитан!",
-    "ensSet": "ENS text record was successfully set"
+    "ensSet": "LNS text record was successfully set"
   },
   "explore": {
     "createStrategy": "Создать стратегию",
@@ -469,7 +469,7 @@
   },
   "unsupportedNetwork": {
     "unsupportedNetwork": "Unsupported network",
-    "ensOnlyMainnet": "Snapshot only supports ENS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
+    "ensOnlyMainnet": "Snapshot only supports LNS on the ethereum mainnet. Once the space is created, you can use it across multiple chains.",
     "switchNetworkToMainnet": "To continue, you need to change the network in your wallet to Ethereum Mainnet.",
     "switchToMainnet": "Switch to Mainnet"
   }
