--- a/src/locales/de-DE.json
+++ b/src/locales/de-DE.json
@@ -263,7 +263,7 @@
     "connectWithSpaceOwner": "Um die Space-Einstellungen zu ändern, verbinden Sie sich mit einem Controller- oder Admin-Wallet."
   },
   "setup": {
-    "example": "z.B. yam.eth",
+    "example": "z.B. yam.bch",
     "chooseExistingEns": "Choose one of your existing LNS domains to create a space with:",
     "useSingleExistingEns": "Use your existing LNS domain:",
     "orReigsterNewEns": "Or register a new domain:",
