--- a/src/locales/default.json
+++ b/src/locales/default.json
@@ -286,7 +286,7 @@
     "set": "Set"
   },
   "setup": {
-    "example": "e.g. yam.eth",
+    "example": "e.g. yam.bch",
     "chooseExistingEns": "Choose one of your existing LNS domains to create a space with:",
     "useSingleExistingEns": "Use your existing LNS domain:",
     "orReigsterNewEns": "Or register a new domain:",
