--- a/src/locales/ro-RO.json
+++ b/src/locales/ro-RO.json
@@ -263,7 +263,7 @@
     "connectWithSpaceOwner": "To modify space settings, connect with a controller or admin wallet."
   },
   "setup": {
-    "example": "e.g. yam.eth",
+    "example": "e.g. yam.bch",
     "chooseExistingEns": "Alege unul dintre domeniile tale LNS existente pentru a crea un spațiu:",
     "useSingleExistingEns": "Utilizează domeniul tău LNS existent:",
     "orReigsterNewEns": "Sau înregistrează un nou domeniu:",
