--- a/src/locales/tr-TR.json
+++ b/src/locales/tr-TR.json
@@ -263,7 +263,7 @@
     "connectWithSpaceOwner": "To modify space settings, connect with a controller or admin wallet."
   },
   "setup": {
-    "example": "örneğin. yam.eth",
+    "example": "örneğin. yam.bch",
     "chooseExistingEns": "Choose one of your existing LNS domains to create a space with:",
     "useSingleExistingEns": "Use your existing LNS domain:",
     "orReigsterNewEns": "Or register a new domain:",
